--- a/src/app/terminal/terminal.component.css
+++ b/src/app/terminal/terminal.component.css
@@ -76,10 +76,25 @@ box-shadow: 10px 10px 71px 0px rgba(0,0,0,0.5);
     caret-color: transparent;
     
     position: absolute; 
-    left: 17px;
-    top: -1px;
+    left: 18px;
+    top: 2px;
     
     height: inherit;
+
+    overflow: hidden;
+    border-right: .15em solid white;
+
+    height: 13px;
+
+    padding-right: 0px;
+
+    animation: blink-caret 0.72s ease-in-out infinite;
+}
+
+
+@keyframes blink-caret {
+    from, to { border-color: transparent }
+    50% { border-color: white }
 }
 
 section.terminal, .terminal-window-header {
