--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,35 @@
 /* You can add global styles to this file, and also import other style files */
+body {
+    background-color: rgb(10,10,10);    
+    margin: 0;
+    padding: 0;
+}
+
+@font-face {
+    font-family: "San Francisco";
+    font-weight: 400;
+    src: url("https://applesocial.s3.amazonaws.com/assets/styles/fonts/sanfrancisco/sanfranciscodisplay-regular-webfont.woff");
+}
+
+.terminal-window .magic {
+    animation: background-pan 3s linear infinite;
+    background: linear-gradient(
+        to right,
+        rgb(123, 31, 162),
+        rgb(103, 58, 183),
+        rgb(244, 143, 177),
+        rgb(123, 31, 162)
+    );
+    background-size: 200%;
+    -webkit-background-clip: text;
+    background-clip: text;
+    -webkit-text-fill-color: transparent;
+    white-space: nowrap;
+
+    font-size: 1em !important;
+    /* letter-spacing: 0.2em; */
+    font-weight: bold;
+    /* font-family: 'Courier New', Courier, monospace; */
+    /* font-family: "San Francisco", sans-serif;
+    font-weight: 600; */
+}
