--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -25,7 +25,7 @@ section#landing-page {
 section#landing-page h1 {
     margin: auto;
     font-size:3em !important;
-    color: white;
+    color: rgb(238, 227, 237);
     /* font-family: "Rubik", sans-serif; */
     font-family: "San Francisco", sans-serif;
     font-size: clamp(2em, 2vw, 4em);
