--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,7 @@
+<!-- <app-navbar style="z-index: 3;"></app-navbar> -->
 <section id="landing-page">
     <div style="z-index: 3;">
-        <!-- <h1><span class="magic">Full-Stack</span> Web Developer</h1> -->
-        <!-- <h1>Eric McKevitt<br>I build stunning web experiences.</h1> -->
         <h1>Full-Stack <span class="magic">&lt;Developer/&gt;</span></h1>
-
         <app-terminal></app-terminal>
     </div>
     
