Added vertical navbar on side

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<!-- <app-navbar style="z-index: 3;"></app-navbar> -->
+<app-navbar style="z-index: 3;"></app-navbar>
 <section id="landing-page">
     <div style="z-index: 3;">
         <h1>Full-Stack <span class="magic">&lt;Developer/&gt;</span></h1>
