--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,5 +1,47 @@
-<nav id="navbar">
+<div class="navigation">
     <ul>
-        <li><a href="#">Home</a></li>
+        <li class="list active">
+            <a href="#">
+                <span class="icon"><ion-icon name="home-outline"></ion-icon></span>
+                <span class="title">Home</span>
+            </a>
+        </li>
+        <li class="list">
+            <a href="#about">
+                <span class="icon"><ion-icon name="person-outline"></ion-icon></span>
+                <span class="title">About</span>
+            </a>
+        </li>
+        <li class="list">
+            <a href="#education">
+                <span class="icon"><ion-icon name="school-outline"></ion-icon></span>
+                <span class="title">Education</span>
+            </a>
+        </li>
+        <li class="list">
+            <a href="#experience">
+                <span class="icon"><ion-icon name="briefcase-outline"></ion-icon></span>
+                <span class="title">Experience</span>
+            </a>
+        </li>
+        <li class="list">
+            <a href="#projects">
+                <span class="icon"><ion-icon name="code-slash-outline"></ion-icon></span>
+                <span class="title">Projects</span>
+            </a>
+        </li>
+        <li class="list">
+            <a href="#skills">
+                <span class="icon"><ion-icon name="analytics-outline"></ion-icon></span>
+                <span class="title">Skills</span>
+            </a>
+        </li>
+        <li class="list">
+            <a href="#contact">
+                <span class="icon"><ion-icon name="mail-outline"></ion-icon></span>
+                <span class="title">Contact</span>
+            </a>
+        </li>
     </ul>
-</nav>
+</div>
+<!-- <script src="nav.js"></script> -->
