--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -118,3 +118,10 @@ section#landing-page * {
 body {
     background-color: rgb(10,10,10);
 }
+
+#about-page {
+    background-color:rgb(238, 227, 237);
+    z-index: 50;
+    width: 100%;
+    height: 100vh;
+}
