--- a/src/app/terminal/terminal.component.css
+++ b/src/app/terminal/terminal.component.css
@@ -107,3 +107,9 @@ section.terminal, .terminal-window-header {
 .manual-control-cursor {
     position: absolute; 
 }
+
+@media screen and (max-width: 600px) {
+    .terminal-window {
+        width: 100%;
+    }
+}
