--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -117,3 +117,11 @@ body {
     width: 100%;
     height: 100vh;
 }
+
+@media screen and (max-width: 487px) {
+    section#landing-page h1 {
+        line-height: 1.1em;
+        text-align: center;
+        border: 1px dashed red;
+    }
+}
